movimentação de imagens para pasta apropriada

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
   <body>
     <div class="Container">
       <header>
-        <img src="telefone.png" alt="telefone" />
+        <img src="images/telefone.png" alt="telefone" />
         <h1>Agenda de Contatos</h1>
       </header>
       <form id="form-atividade">
@@ -36,7 +36,7 @@
           <tr>
             <td>Número</td>
             <td>98765-4321</td>
-            <td id="contato"><img src="contato.png" alt="foto do contato" /></td>
+            <td id="contato"><img src="images/contato.png" alt="foto do contato" /></td>
           </tr>
         </tfoot>
       </table>
